# Cpp_STL_Functor_CLion

FunctionObject/: CMakeLists.txt
FunctionObject/Functor_Base/: Functor_BasicUse.cpp
FunctionObject/Functor_Functional/: Functor_Arithmetic.cpp  Functor_Logic.cpp  Functor_Relation.cpp
FunctionObject/Functor_Predicate/: Functor_BinaryPredicate.cpp  Functor_UnaryPredicate.cpp
